components/scigateway/envs/staging/scigateway.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scigateway
  namespace: fia
spec:
  template:
    spec:
      containers:
        - name: scigateway
          image: ghcr.io/fiaisis/scigateway@sha256:d91d94843e26f82a9fd5dd75cf332a9b3183448e7c8a8a13f06617c6bf437555
