components/scigateway/envs/staging/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: scigateway
  namespace: fia
spec:
  hostnames:
    - "dev.reduce.isis.cclrc.ac.uk"
